tests-macros/tests/value/fail_struct_field_not_impl.stderr
error[E0277]: the trait bound `F: Reflect` is not satisfied
 --> tests/value/fail_struct_field_not_impl.rs:3:10
  |
3 | #[derive(qi_macros::Reflect, qi_macros::ToValue, qi_macros::IntoValue, qi_macros::FromValue)]
  |          ^^^^^^^^^^^^^^^^^^ the trait `Reflect` is not implemented for `F`
  |
  = help: the following other types implement trait `Reflect`:
            &T
            &mut T
            &str
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
  = note: this error originates in the derive macro `qi_macros::Reflect` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `F: RuntimeReflect` is not satisfied
 --> tests/value/fail_struct_field_not_impl.rs:3:10
  |
3 | #[derive(qi_macros::Reflect, qi_macros::ToValue, qi_macros::IntoValue, qi_macros::FromValue)]
  |          ^^^^^^^^^^^^^^^^^^ the trait `RuntimeReflect` is not implemented for `F`
  |
  = help: the following other types implement trait `RuntimeReflect`:
            &T
            &mut T
            &str
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
  = note: this error originates in the derive macro `qi_macros::Reflect` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `F: ToValue` is not satisfied
 --> tests/value/fail_struct_field_not_impl.rs:3:30
  |
3 | #[derive(qi_macros::Reflect, qi_macros::ToValue, qi_macros::IntoValue, qi_macros::FromValue)]
  |                              ^^^^^^^^^^^^^^^^^^ the trait `ToValue` is not implemented for `F`
  |
  = help: the following other types implement trait `ToValue`:
            &T
            &mut T
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
          and $N others
  = note: this error originates in the derive macro `qi_macros::ToValue` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `F: IntoValue<'_>` is not satisfied
 --> tests/value/fail_struct_field_not_impl.rs:3:50
  |
3 | #[derive(qi_macros::Reflect, qi_macros::ToValue, qi_macros::IntoValue, qi_macros::FromValue)]
  |                                                  ^^^^^^^^^^^^^^^^^^^^ the trait `IntoValue<'_>` is not implemented for `F`
  |
  = help: the following other types implement trait `IntoValue<'a>`:
            <&'long T as IntoValue<'short>>
            <&'long mut T as IntoValue<'short>>
            <() as IntoValue<'a>>
            <(T0, T1) as IntoValue<'a>>
            <(T0, T1, T2) as IntoValue<'a>>
            <(T0, T1, T2, T3) as IntoValue<'a>>
            <(T0, T1, T2, T3, T4) as IntoValue<'a>>
            <(T0, T1, T2, T3, T4, T5) as IntoValue<'a>>
          and $N others
  = note: this error originates in the derive macro `qi_macros::IntoValue` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `F: FromValue<'_>` is not satisfied
 --> tests/value/fail_struct_field_not_impl.rs:3:72
  |
3 | #[derive(qi_macros::Reflect, qi_macros::ToValue, qi_macros::IntoValue, qi_macros::FromValue)]
  |                                                                        ^^^^^^^^^^^^^^^^^^^^ the trait `FromValue<'_>` is not implemented for `F`
  |
  = help: the following other types implement trait `FromValue<'a>`:
            <&'short [u8] as FromValue<'long>>
            <&'short str as FromValue<'long>>
            <() as FromValue<'_>>
            <(T0, T1) as FromValue<'a>>
            <(T0, T1, T2) as FromValue<'a>>
            <(T0, T1, T2, T3) as FromValue<'a>>
            <(T0, T1, T2, T3, T4) as FromValue<'a>>
            <(T0, T1, T2, T3, T4, T5) as FromValue<'a>>
          and $N others
  = note: this error originates in the derive macro `qi_macros::FromValue` (in Nightly builds, run with -Z macro-backtrace for more info)
